--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible"
+    content="IE=edge">
+    <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Market Parral</title>
 </head>
 <body>
-   <h1>Market Parral</h1>
-   <img src="./marcaParral-logo.png" alt="MarcaParral">
+   <header>
+        <a href="./index.html" class="logo">
+            <img src="./marcaParral-logo.png" alt="MarcaParral">
+            <h2 class="nombre-empresa">Market Parral</h2>
+        </a>
+        <nav>
+            <a href="" class="nav-link">Inicio</a>
+            <a href="" class="nav-link">Sobre Nosotros</a>
+            <a href="" class="nav-link">Contacto</a>
+        </nav>
+   </header> 
 </body>
 </html>
