--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="marcaParral-logo.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible"
     content="IE=edge">
@@ -13,16 +14,75 @@
     <title>Market Parral</title>
 </head>
 <body>
-   <header>
-        <a href="./index.html" class="logo">
-            <img src="./marcaParral-logo.png" alt="MarcaParral">
-            <h2 class="nombre-empresa">Market Parral</h2>
-        </a>
-        <nav>
-            <a href="" class="nav-link">Inicio</a>
-            <a href="" class="nav-link">Sobre Nosotros</a>
-            <a href="" class="nav-link">Contacto</a>
-        </nav>
-   </header> 
+    <div class="conteiner">
+        <header>
+            <a href="./index.html" class="logo">
+                <img src="./marcaParral-logo.png" alt="MarcaParral">
+                <h2 class="nombre-empresa">Parral Market</h2>
+            </a>
+            <nav>
+                <a href="" class="nav-link">Inicio</a>
+                <a href="" class="nav-link">Sobre Nosotros</a>
+                <a href="" class="nav-link">Catalogo</a>
+                <a href="" class="nav-link">Contacto</a>
+            </nav>
+       </header> 
+       <main>
+            <section>
+                <h2>Parral Market</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
+
+            </section>
+       </main>
+       <footer class="footer">
+           <ul class="social-icon">
+               <li class="icon-elem">
+                   <a href="" class="icon">
+                       <ion-icon name="logo-facebook"></ion-icon>
+                   </a>
+               </li>
+               <li class="icon-elem">
+                   <a href="" class="icon">
+                       <ion-icon name="logo-instagram"></ion-icon>
+                   </a>
+               </li>
+               <li class="icon-elem">
+                   <a href="" class="icon"><ion-icon name="logo-whatsapp"></ion-icon></a>
+               </li>
+               <li class="icon-elem">
+                   <a href="" class="icon"><ion-icon name="mail-outline"></ion-icon></a>
+               </li>
+           </ul>
+           <ul class="menu">
+               <li class="menu-elem">
+                   <a href="" class="menu-icon"> Inicio</a>
+               </li>
+               <li class="menu-elem">
+                   <a href="" class="menu-icon"> Acerca de Nosotros</a>
+               </li>
+               <li class="menu-elem">
+                   <a href="" class="menu-icon"> Contacto</a>
+               </li>
+               <li class="menu-elem">
+                   <a href="" class="menu-icon"> Catalogo</a>
+               </li>
+           </ul>
+           <p class="text">@Año | Todos los derechos reservados</p>
+       </footer>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
