--- a/index.html
+++ b/index.html
@@ -21,29 +21,27 @@
                 <h2 class="nombre-empresa">Parral Market</h2>
             </a>
             <nav>
-                <a href="" class="nav-link">Inicio</a>
-                <a href="" class="nav-link">Sobre Nosotros</a>
-                <a href="" class="nav-link">Catalogo</a>
-                <a href="" class="nav-link">Contacto</a>
+                <a href="" class="nav-link">Home</a>
+                <a href="" class="nav-link">About Us</a>
+                <a href="" class="nav-link">Catalog</a>
+                <a href="" class="nav-link">Contact</a>
             </nav>
        </header> 
        <main>
-            <section>
-                <h2>Parral Market</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquid, eum ea dolorem voluptatem dignissimos commodi ullam consequuntur explicabo voluptatibus reiciendis consequatur at enim nam. Dolore, rem error. Voluptatum, magnam?</p>
-
+            <section class="slides">
+                <div class="slider-wrapper">
+                    <div class="slider">
+                        <img id="slide-1" src="./slide1.jpeg" alt="Image Parral Market">
+                        <img id="slide-2" src="./slide2.jpeg" alt="Image Parral Market">
+                        <img id="slide-3" src="./slide3.jpeg" alt="Image Parral Market">
+                    </div>
+                    <div class="slider-nav">
+                        <a href="#slide-1"></a>
+                        <a href="#slide-2"></a>
+                        <a href="#slide-3"></a>
+                    </div>
+                </div>
+                
             </section>
        </main>
        <footer class="footer">
@@ -67,19 +65,19 @@
            </ul>
            <ul class="menu">
                <li class="menu-elem">
-                   <a href="" class="menu-icon"> Inicio</a>
+                   <a href="" class="menu-icon"> Home</a>
                </li>
                <li class="menu-elem">
-                   <a href="" class="menu-icon"> Acerca de Nosotros</a>
+                   <a href="" class="menu-icon"> About Us</a>
                </li>
                <li class="menu-elem">
-                   <a href="" class="menu-icon"> Contacto</a>
+                   <a href="" class="menu-icon"> Catalog</a>
                </li>
                <li class="menu-elem">
-                   <a href="" class="menu-icon"> Catalogo</a>
+                   <a href="" class="menu-icon"> Contact</a>
                </li>
            </ul>
-           <p class="text">@Año | Todos los derechos reservados</p>
+           <p class="text">@Year | All rights reserved</p>
        </footer>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
