--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <h2 class="nombre-empresa">Parral Market</h2>
             </a>
             <nav>
-                <a href="" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
                 <a href="" class="nav-link">About Us</a>
-                <a href="" class="nav-link">Catalog</a>
+                <a href="catalog.html" class="nav-link">Catalog</a>
                 <a href="" class="nav-link">Contact</a>
             </nav>
        </header> 
