--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="catalog.css">
     <title>Market Parral</title>
 </head>
 <body>
@@ -29,6 +29,6 @@
         </div>
       </div>
       
-      <script src=""></script>
+      <script src="catalog.js"></script>
 </body>
 </html>
