--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     <title>Market Parral</title>
 </head>
 <body>
+        <div class="social-bar">
+        <ul class="social-icon">
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon"><ion-icon name="logo-whatsapp"></ion-icon></a>
+            </li>
+            <li class="icon-elem">
+                <a href="" class="icon"><ion-icon name="mail-outline"></ion-icon></a>
+            </li>
+        </ul>
+    </div>
     <div class="conteiner">
         <header>
             <a href="./index.html" class="logo">
